Compress log event
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>